--- a/nuitka/codegen/templates_c/HelperOperationBinary.c.j2
+++ b/nuitka/codegen/templates_c/HelperOperationBinary.c.j2
@@ -16,7 +16,7 @@
 {#     limitations under the License.                                           #}
 {#                                                                              #}
 {% from 'HelperSlotsCommon.c.j2' import goto_exit %}
-{% from 'HelperSlotsInt.c.j2' import int_slot %}
+{% from 'HelperSlotsInt.c.j2' import int_slot with context %}
 {% from 'HelperSlotsBinary.c.j2' import binary_operation, call_binary_slot with context %}
 {% macro binary_fallback_operation(props, target, left, right, type1, type2) %}
 #ifdef _MSC_VER
