--- a/nuitka/codegen/templates_c/HelperSlotsLong.c.j2
+++ b/nuitka/codegen/templates_c/HelperSlotsLong.c.j2
@@ -34,7 +34,84 @@
     {{ declare_long_access(right, operand2) }}
 
     if ({{ left.getLongValueDigitCountExpression("operand1")}} <= 1 && {{ right.getLongValueDigitCountExpression("operand2")}} <= 1) {
-        long r = MEDIUM_VALUE({{ operand1 }}) + MEDIUM_VALUE({{ operand2 }});
+        long r = {{ left.getLongValueMediumValueExpression("operand1") }} + {{ right.getLongValueMediumValueExpression("operand2") }};
+
+{% if target == None and left.hasReferenceCounting() %}
+        if (Py_REFCNT({{operand1}}) == 1) {
+            Nuitka_LongUpdateFromCLong(&{{operand1}}, r);
+            {{ goto_exit(props, "exit_result_ok") }}
+        } else {
+            PyObject *obj = Nuitka_LongFromCLong(r);
+
+            {{ goto_exit(props, "exit_result_object", "obj") }}
+        }
+{% endif %}
+        {{ goto_exit(props, "exit_result_ok_clong", "r") }}
+    }
+
+{% if target == None and left.hasReferenceCounting() %}
+    if (Py_REFCNT({{operand1}}) == 1) {
+        digit const *b_digits = {{ right.getLongValueDigitsPointerExpression("operand2") }};
+        Py_ssize_t b_digit_count = {{ right.getLongValueDigitCountExpression("operand2") }};
+
+        bool a_negative = {{ left.getLongValueIsNegativeTestExpression("operand1") }};
+        bool b_negative = {{ right.getLongValueIsNegativeTestExpression("operand2") }};
+
+        if (a_negative) {
+            if (b_negative) {
+                {{ operand1 }} = _Nuitka_LongAddInplaceDigits({{ operand1 }}, b_digits, b_digit_count);
+                Py_SIZE({{ operand1 }}) = -Py_ABS(Py_SIZE({{ operand1 }}));
+            } else {
+                {# Reversed operands order means sign inversion. #}
+                {{ operand1 }} = _Nuitka_LongSubInplaceDigits({{ operand1 }}, b_digits, b_digit_count, -1);
+            }
+        } else {
+            if (b_negative) {
+                {{ operand1 }} = _Nuitka_LongSubInplaceDigits({{ operand1 }}, b_digits, b_digit_count, 1);
+            } else {
+                {{ operand1 }} = _Nuitka_LongAddInplaceDigits({{ operand1 }}, b_digits, b_digit_count);
+            }
+        }
+
+        {{ goto_exit(props, "exit_result_ok") }}
+    }
+{% endif %}
+    {
+        {# TODO: Only LONG result is done here #}
+        PyLongObject *z;
+
+        digit const *a_digits = {{ left.getLongValueDigitsPointerExpression("operand1") }};
+        Py_ssize_t a_digit_count = {{ left.getLongValueDigitCountExpression("operand1") }};
+        bool a_negative = {{ left.getLongValueIsNegativeTestExpression("operand1") }};
+        digit const *b_digits = {{ right.getLongValueDigitsPointerExpression("operand2") }};
+        Py_ssize_t b_digit_count = {{ right.getLongValueDigitCountExpression("operand2") }};
+        bool b_negative = {{ right.getLongValueIsNegativeTestExpression("operand2") }};
+
+        if (a_negative) {
+            if (b_negative) {
+                z = _Nuitka_LongAddDigits(a_digits, a_digit_count, b_digits, b_digit_count);
+
+                Py_SIZE(z) = -(Py_SIZE(z));
+            } else {
+                {# Reversed operands order. #}
+                z = _Nuitka_LongSubDigits(b_digits, b_digit_count, a_digits, a_digit_count);
+            }
+        } else {
+            if (b_negative) {
+                z = _Nuitka_LongSubDigits(a_digits, a_digit_count, b_digits, b_digit_count);
+            } else {
+                z = _Nuitka_LongAddDigits(a_digits, a_digit_count, b_digits, b_digit_count);
+            }
+        }
+
+        {{ goto_exit(props, "exit_result_object", "(PyObject *)z") }}
+    }
+{% elif operator == "-" %}
+    {{ declare_long_access(left, operand1) }}
+    {{ declare_long_access(right, operand2) }}
+
+    if ({{ left.getLongValueDigitCountExpression("operand1")}} <= 1 && {{ right.getLongValueDigitCountExpression("operand2")}} <= 1) {
+        long r = {{ left.getLongValueMediumValueExpression("operand1") }} - {{ right.getLongValueMediumValueExpression("operand2") }};
 
 {% if target == None and left.hasReferenceCounting() %}
         if (Py_REFCNT({{operand1}}) == 1) {
@@ -51,127 +128,55 @@
 
 {% if target == None %}
     if (Py_REFCNT({{operand1}}) == 1) {
-        digit const *b = Nuitka_LongGetDigitPointer({{ operand2 }});
-        Py_ssize_t size_b = Nuitka_LongGetDigitSize({{ operand2 }});
+        digit const *b_digits = {{ right.getLongValueDigitsPointerExpression("operand2") }};
+        Py_ssize_t b_digit_count = {{ right.getLongValueDigitCountExpression("operand2") }};
 
-#if 0
-        PyObject *r = BINARY_OPERATION_ADD_OBJECT_LONG_LONG( {{ operand1 }}, {{ operand2 }} );
-#endif
-        if (Py_SIZE({{ operand1 }}) < 0) {
-            if (Py_SIZE({{ operand2 }}) < 0) {
-                {{ operand1 }} = _Nuitka_LongAddInplaceDigits({{ operand1 }}, b, size_b);
-                Py_SIZE({{ operand1 }}) = -Py_ABS(Py_SIZE({{ operand1 }}));
-            } else {
+        bool a_negative = {{ left.getLongValueIsNegativeTestExpression("operand1") }};
+        bool b_negative = {{ right.getLongValueIsNegativeTestExpression("operand2") }};
+
+        if (a_negative) {
+            if (b_negative) {
                 {# Reversed operands order means sign inversion. #}
-                {{ operand1 }} = _Nuitka_LongSubInplaceDigits({{ operand1 }}, b, size_b, -1);
+                {{ operand1 }} = _Nuitka_LongSubInplaceDigits({{ operand1 }}, b_digits, b_digit_count, -1);
+            } else {
+                {{ operand1 }} = _Nuitka_LongAddInplaceDigits({{ operand1 }}, b_digits, b_digit_count);
+                Py_SIZE({{ operand1 }}) = -Py_ABS(Py_SIZE({{ operand1 }}));
             }
         } else {
-            if (Py_SIZE({{ operand2 }}) < 0) {
-                {{ operand1 }} = _Nuitka_LongSubInplaceDigits({{ operand1 }}, b, size_b, 1);
+            if (b_negative) {
+                {{ operand1 }} = _Nuitka_LongAddInplaceDigits({{ operand1 }}, b_digits, b_digit_count);
             } else {
-                {{ operand1 }} = _Nuitka_LongAddInplaceDigits({{ operand1 }}, b, size_b);
+                {{ operand1 }} = _Nuitka_LongSubInplaceDigits({{ operand1 }}, b_digits, b_digit_count, 1);
             }
         }
-
-#if 0
-        assert(PyObject_RichCompareBool(r, {{operand1}}, Py_EQ) == 1);
-        Py_DECREF(r);
-#endif
 
         {{ goto_exit(props, "exit_result_ok") }}
     }
 {% endif %}
     {
+        {# TODO: Only LONG result is done here #}
         PyLongObject *z;
 
-        digit const *a = Nuitka_LongGetDigitPointer({{ operand1 }});
-        Py_ssize_t size_a = Nuitka_LongGetDigitSize({{ operand1 }});
-        digit const *b = Nuitka_LongGetDigitPointer({{ operand2 }});
-        Py_ssize_t size_b = Nuitka_LongGetDigitSize({{ operand2 }});
+        digit const *a_digits = {{ left.getLongValueDigitsPointerExpression("operand1") }};
+        Py_ssize_t a_digit_count = {{ left.getLongValueDigitCountExpression("operand1") }};
+        bool a_negative = {{ left.getLongValueIsNegativeTestExpression("operand1") }};
+        digit const *b_digits = {{ right.getLongValueDigitsPointerExpression("operand2") }};
+        Py_ssize_t b_digit_count = {{ right.getLongValueDigitCountExpression("operand2") }};
+        bool b_negative = {{ right.getLongValueIsNegativeTestExpression("operand2") }};
 
-        if (Py_SIZE({{ operand1 }}) < 0) {
-            if (Py_SIZE({{ operand2 }}) < 0) {
-                z = _Nuitka_LongAddDigits(a, size_a, b, size_b);
-
-                Py_SIZE(z) = -(Py_SIZE(z));
+        if (a_negative) {
+            if (b_negative) {
+                z = _Nuitka_LongSubDigits(a_digits, a_digit_count, b_digits, b_digit_count);
             } else {
-                {# Reversed operands order. #}
-                z = _Nuitka_LongSubDigits(b, size_b, a, size_a);
-            }
-        } else {
-            if (Py_SIZE({{ operand2 }}) < 0) {
-                z = _Nuitka_LongSubDigits(a, size_a, b, size_b);
-            } else {
-                z = _Nuitka_LongAddDigits(a, size_a, b, size_b);
-            }
-        }
-
-        {{ goto_exit(props, "exit_result_object", "(PyObject *)z") }}
-    }
-{% elif operator == "-" %}
-    if (Py_ABS(Py_SIZE({{ operand1 }})) <= 1 && Py_ABS(Py_SIZE({{ operand2 }})) <= 1) {
-{% if target == None %}
-        if (Py_REFCNT({{operand1}}) == 1) {
-            Nuitka_LongUpdateFromCLong(&{{operand1}}, MEDIUM_VALUE({{ operand1 }}) - MEDIUM_VALUE({{ operand2 }}));
-            {{ goto_exit(props, "exit_result_ok") }}
-        }
-{% endif %}
-        PyObject *r = Nuitka_LongFromCLong(MEDIUM_VALUE({{ operand1 }}) - MEDIUM_VALUE({{ operand2 }}));
-        {{ goto_exit(props, "exit_result_object", "r") }}
-    }
-{% if target == None %}
-    if (Py_REFCNT({{operand1}}) == 1) {
-        digit const *b = Nuitka_LongGetDigitPointer({{ operand2 }});
-        Py_ssize_t size_b = Nuitka_LongGetDigitSize({{ operand2 }});
-
-#if 0
-        PyObject *r = BINARY_OPERATION_SUB_OBJECT_LONG_LONG( {{ operand1 }}, {{ operand2 }} );
-#endif
-        if (Py_SIZE({{ operand1 }}) < 0) {
-            if (Py_SIZE({{ operand2 }}) < 0) {
-                {# Reversed operands order means sign inversion. #}
-                {{ operand1 }} = _Nuitka_LongSubInplaceDigits({{ operand1 }}, b, size_b, -1);
-            } else {
-                {{ operand1 }} = _Nuitka_LongAddInplaceDigits({{ operand1 }}, b, size_b);
-                Py_SIZE({{ operand1 }}) = -Py_ABS(Py_SIZE({{ operand1 }}));
-            }
-        } else {
-            if (Py_SIZE({{ operand2 }}) < 0) {
-                {{ operand1 }} = _Nuitka_LongAddInplaceDigits({{ operand1 }}, b, size_b);
-            } else {
-                {{ operand1 }} = _Nuitka_LongSubInplaceDigits({{ operand1 }}, b, size_b, 1);
-            }
-        }
-
-#if 0
-        assert(PyObject_RichCompareBool(r, {{operand1}}, Py_EQ) == 1);
-        Py_DECREF(r);
-#endif
-
-        {{ goto_exit(props, "exit_result_ok") }}
-    }
-{% endif %}
-    {
-        PyLongObject *z;
-
-        digit const *a = Nuitka_LongGetDigitPointer({{ operand1 }});
-        Py_ssize_t size_a = Nuitka_LongGetDigitSize({{ operand1 }});
-        digit const *b = Nuitka_LongGetDigitPointer({{ operand2 }});
-        Py_ssize_t size_b = Nuitka_LongGetDigitSize({{ operand2 }});
-
-        if (Py_SIZE({{ operand1 }}) < 0) {
-            if (Py_SIZE({{ operand2 }}) < 0) {
-                z = _Nuitka_LongSubDigits(a, size_a, b, size_b);
-            } else {
-                z = _Nuitka_LongAddDigits(a, size_a, b, size_b);
+                z = _Nuitka_LongAddDigits(a_digits, a_digit_count, b_digits, b_digit_count);
             }
 
             Py_SIZE(z) = -(Py_SIZE(z));
         } else {
-            if (Py_SIZE({{ operand2 }}) < 0) {
-                z = _Nuitka_LongAddDigits(a, size_a, b, size_b);
+            if (b_negative) {
+                z = _Nuitka_LongAddDigits(a_digits, a_digit_count, b_digits, b_digit_count);
             } else {
-                z = _Nuitka_LongSubDigits(a, size_a, b, size_b);
+                z = _Nuitka_LongSubDigits(a_digits, a_digit_count, b_digits, b_digit_count);
             }
         }
 
